--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: "Seth Mabbott | Selected Work"
 
 <html>
   <head>
-    <title></title>
+    <title>{{title}}</title>
     
   </head>
   <body>
