--- a/index.html
+++ b/index.html
@@ -3,12 +3,16 @@ layout: default
 title: "Seth Mabbott | Selected Work"
 ---
 
-<html>
-  <head>
-    <title>{{title}}</title>
-    
-  </head>
-  <body>
-    <p>[ Coming Soon ]</p>
-  </body>
-</html>
+<h1>[ Coming Soon ]</h1>
+<section>
+  <h2>Turning abstract ideas into tangible visions</h2>
+</section>
+ <section>
+  <h2>Through sketching and diagraming</h2>
+</section>
+  <section>
+  <h2>Lo-fi and Hi-Fi prototypes</h2>
+</section>
+ <section>
+  <h2>Digital and Physical</h2>
+</section>
