--- a/projects.html
+++ b/projects.html
@@ -1,11 +1,12 @@
 ---
-
+layout: default
+permalink: /work
 ---
-h1 Projects
+<h1>Work</h1>
 {% for project in site.projects %}
   <h2>
     <a href="{{ project.url }}">
-      {{ project.title}}}
+      {{ project.title}}
     </a>
   </h2>
 {% endfor %}
