--- a/index.html
+++ b/index.html
@@ -1,18 +1,44 @@
 ---
-layout: default
-title: "Seth Mabbott | Selected Work"
+liquid: true
 ---
 
-<h1>[ Coming Soon ]</h1>
-<section>
-  <h2>Turning abstract ideas into tangible visions</h2>
-</section>
- <section>
-  <h2>Through sketching and diagraming</h2>
-</section>
-  <section>
-  <h2>Lo-fi and Hi-Fi prototypes</h2>
-</section>
- <section>
-  <h2>Digital and Physical</h2>
-</section>
+<!DOCTYPE html>
+<html lang="{{ site.lang | default: "en-US" }}">
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8">
+    <title>Day For Night Design</title>
+    <link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}">
+  </head>
+  <body class="home">
+
+    <div class="title-wrapper">
+      <h1>
+        <span class="reverse-text">D</span>AY <br/>
+        FO<span class="reverse-text">R</span> <br/>
+        <span class="reverse-text">N</span>IGHT <br/>
+      </h1>
+      <hr>
+      <h2>
+        Digital Prototyping
+      </h2>
+      <h2>
+        Physical Computing
+      </h2>
+      <h2>
+        Design
+      </h2>
+      <!-- <h2>↓</h2> -->
+      <h2 class="direction">˅ </h2>
+    </div>
+
+    <nav>
+      <ul>
+        <li><a href="/work">work</a></li>
+        <li><a href="/about">about</a></li>
+        <li><a href="/contact">contact</a></li>
+      </ul>
+    </nav>
+
+    </body>
+  </html>
