branding and a little structure

--- a/projects.html
+++ b/projects.html
@@ -1,8 +1,9 @@
 ---
-layout: day 
+title: Work
+layout: night 
 permalink: /work
 ---
-<h1>Work</h1>
+
 {% for project in site.projects %}
   <h2>
     <a href="{{ project.url }}">
@@ -10,3 +11,4 @@ permalink: /work
     </a>
   </h2>
 {% endfor %}
+
