--- a/index.html
+++ b/index.html
@@ -7,38 +7,33 @@ liquid: true
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
-    <title>Day For Night Design</title>
+    <title>Day For Night</title>
     <link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}">
   </head>
-  <body class="home">
-
+  <body class="home night">
     <div class="title-wrapper">
       <h1>
         <span class="reverse-text">D</span>AY <br/>
         FO<span class="reverse-text">R</span> <br/>
         <span class="reverse-text">N</span>IGHT <br/>
       </h1>
-      <hr>
-      <h2>
-        Digital Prototyping
-      </h2>
-      <h2>
-        Physical Computing
-      </h2>
-      <h2>
-        Design
-      </h2>
-      <!-- <h2>↓</h2> -->
-      <h2 class="direction">˅ </h2>
-    </div>
+        <hr>
+        <h2>
+          Digital Prototyping
+        </h2>
+        <h2>
+          Physical Computing
+        </h2>
+        <h2>
+          Design
+        </h2>
+       <!-- <h2>
+          🡦
+        </h2> -->
+      </div>
 
-    <nav>
-      <ul>
-        <li><a href="/work">work</a></li>
-        <li><a href="/about">about</a></li>
-        <li><a href="/contact">contact</a></li>
-      </ul>
-    </nav>
+      {% include nav.html %}
 
     </body>
   </html>
+
