layout and content for About

--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@ title: About
     One of Hollywood's many innovations is a technique for filming night scenes during the day when it is more practical, and to process the footage afterwards to make it look like it was shot at night. This simulation, known as "day for night" communicates the <em>idea</em> of nighttime without the complication and expense of implementing the real thing, and carries the audience through the suspension of disbelief necessary for telling a story.
   </p>
   <p>
-    At <strong>Day for Night</strong> we help our clients communicate their ideas to gain buy-in from sponsors, alignment from teams and validation from customers. Our digital and physical prototyping brings tangibility to their ideas, affords feedback, prompts iteration, and identifies when they may need to pivot--de-risking an otherwise costly process. 
+    At <strong>Day for Night</strong> we help our clients communicate their ideas to gain buy-in from sponsors, alignment from teams and validation from customers. Our digital and physical prototyping brings tangibility to their ideas, affords feedback, prompts iteration, and identifies when they may need to pivot--de-risking an otherwise costly process. We simulate the experiences necessary to tell your story. 
   </p>
   <p>
     <strong>We make abstract ideas concrete</strong> through a range of prototyping techniques at levels of fidelity that match the needs of a project at any given stage. 
@@ -16,4 +16,7 @@ title: About
   <p>
     { CTA (contact &| browse portfolio )}
   </p>
+
+  <p>{ Philosophy? }</p>
+  <p>{ more about prototyping? }</p>
 </article>
